--- a/test/test1/index.html
+++ b/test/test1/index.html
@@ -5,6 +5,7 @@
           crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/css/button.css">
+    <link rel="canonical" href="blah">
   </head>
   <body>
     <i class="fa fa-camera-retro fa-lg"></i> fa-lg
